fix padding issues for the first block and sync carousel-column horizontal whitespace

--- a/src/containers/PageBuilder/SectionBuilder/SectionBuilder.module.css
+++ b/src/containers/PageBuilder/SectionBuilder/SectionBuilder.module.css
@@ -99,13 +99,17 @@
     margin-top: 12px;
   }
 
+  &:empty + .blockContainer {
+    padding: 0 32px 0 32px;
+  }
+
+  &:not(:empty) + .blockContainer {
+    padding: 64px 32px 0 32px;
+  }
+
   @media (--viewportMedium) {
     justify-content: center;
   }
-}
-
-.blockContainer {
-  padding: 64px 32px 0 32px;
 }
 
 .align {
